--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,21 +1,32 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+}
+
+body, html {
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    height: 100%;
 }
 
 .container {
     border: none;
     background-color: rgb(0, 82, 7);
-    padding: 25px 25px;
     display: flex;
+    align-items: center;
     justify-content: end;
 }
 
+.item-menu {
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 div {
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.24);
     padding: 5px;
     gap: 10px;
-    border: 1px solid;
     background-color: white;
 }
 
